Fix banner on IE

--- a/src/assets/scss/components/banner.scss
+++ b/src/assets/scss/components/banner.scss
@@ -122,6 +122,7 @@
     left: 0;
     position: absolute;
     right: 0;
+    width: 100%;
     .banner-title {
       padding-bottom: 50px;
     }
